// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/github/relationalView comment matches snapshot 1`] = `
Object {
  "address": Object {
    "id": "373768703",
    "parent": Object {
      "number": "2",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "ISSUE",
    },
    "type": "COMMENT",
  },
  "body": "It should also be possible to reference by exact url: https://github.com/sourcecred/example-github/issues/6",
  "nominalAuthor": Object {
    "address": Object {
      "login": "decentralion",
      "type": "USERLIKE",
    },
    "type": "USERLIKE",
    "url": "https://github.com/decentralion",
  },
  "type": "COMMENT",
  "url": "https://github.com/sourcecred/example-github/issues/2#issuecomment-373768703",
}
`;

exports[`plugins/github/relationalView issue matches snapshot 1`] = `
Object {
  "address": Object {
    "number": "2",
    "repo": Object {
      "name": "example-github",
      "owner": "sourcecred",
      "type": "REPO",
    },
    "type": "ISSUE",
  },
  "body": "This issue references another issue, namely #1",
  "comments": Array [
    Object {
      "address": Object {
        "id": "373768703",
        "parent": Object {
          "number": "2",
          "repo": Object {
            "name": "example-github",
            "owner": "sourcecred",
            "type": "REPO",
          },
          "type": "ISSUE",
        },
        "type": "COMMENT",
      },
      "body": "It should also be possible to reference by exact url: https://github.com/sourcecred/example-github/issues/6",
      "nominalAuthor": Object {
        "address": Object {
          "login": "decentralion",
          "type": "USERLIKE",
        },
        "type": "USERLIKE",
        "url": "https://github.com/decentralion",
      },
      "type": "COMMENT",
      "url": "https://github.com/sourcecred/example-github/issues/2#issuecomment-373768703",
    },
    Object {
      "address": Object {
        "id": "373768850",
        "parent": Object {
          "number": "2",
          "repo": Object {
            "name": "example-github",
            "owner": "sourcecred",
            "type": "REPO",
          },
          "type": "ISSUE",
        },
        "type": "COMMENT",
      },
      "body": "We might also reference individual comments directly.
https://github.com/sourcecred/example-github/issues/6#issuecomment-373768538",
      "nominalAuthor": Object {
        "address": Object {
          "login": "decentralion",
          "type": "USERLIKE",
        },
        "type": "USERLIKE",
        "url": "https://github.com/decentralion",
      },
      "type": "COMMENT",
      "url": "https://github.com/sourcecred/example-github/issues/2#issuecomment-373768850",
    },
    Object {
      "address": Object {
        "id": "385576185",
        "parent": Object {
          "number": "2",
          "repo": Object {
            "name": "example-github",
            "owner": "sourcecred",
            "type": "REPO",
          },
          "type": "ISSUE",
        },
        "type": "COMMENT",
      },
      "body": "Here's a PR by direct url: https://github.com/sourcecred/example-github/pull/5",
      "nominalAuthor": Object {
        "address": Object {
          "login": "decentralion",
          "type": "USERLIKE",
        },
        "type": "USERLIKE",
        "url": "https://github.com/decentralion",
      },
      "type": "COMMENT",
      "url": "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576185",
    },
    Object {
      "address": Object {
        "id": "385576220",
        "parent": Object {
          "number": "2",
          "repo": Object {
            "name": "example-github",
            "owner": "sourcecred",
            "type": "REPO",
          },
          "type": "ISSUE",
        },
        "type": "COMMENT",
      },
      "body": "a PR review by url: https://github.com/sourcecred/example-github/pull/5#pullrequestreview-100313899",
      "nominalAuthor": Object {
        "address": Object {
          "login": "decentralion",
          "type": "USERLIKE",
        },
        "type": "USERLIKE",
        "url": "https://github.com/decentralion",
      },
      "type": "COMMENT",
      "url": "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576220",
    },
    Object {
      "address": Object {
        "id": "385576248",
        "parent": Object {
          "number": "2",
          "repo": Object {
            "name": "example-github",
            "owner": "sourcecred",
            "type": "REPO",
          },
          "type": "ISSUE",
        },
        "type": "COMMENT",
      },
      "body": "a PR Review Comment by url: https://github.com/sourcecred/example-github/pull/5#discussion_r171460198",
      "nominalAuthor": Object {
        "address": Object {
          "login": "decentralion",
          "type": "USERLIKE",
        },
        "type": "USERLIKE",
        "url": "https://github.com/decentralion",
      },
      "type": "COMMENT",
      "url": "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576248",
    },
    Object {
      "address": Object {
        "id": "385576273",
        "parent": Object {
          "number": "2",
          "repo": Object {
            "name": "example-github",
            "owner": "sourcecred",
            "type": "REPO",
          },
          "type": "ISSUE",
        },
        "type": "COMMENT",
      },
      "body": "a user by url: https://github.com/wchargin",
      "nominalAuthor": Object {
        "address": Object {
          "login": "decentralion",
          "type": "USERLIKE",
        },
        "type": "USERLIKE",
        "url": "https://github.com/decentralion",
      },
      "type": "COMMENT",
      "url": "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576273",
    },
    Object {
      "address": Object {
        "id": "385576920",
        "parent": Object {
          "number": "2",
          "repo": Object {
            "name": "example-github",
            "owner": "sourcecred",
            "type": "REPO",
          },
          "type": "ISSUE",
        },
        "type": "COMMENT",
      },
      "body": "Here are several references:
#1 
#2
#3 

https://github.com/sourcecred/example-github/pull/5#discussion_r171460198
https://github.com/sourcecred/example-github/pull/5#pullrequestreview-100313899
",
      "nominalAuthor": Object {
        "address": Object {
          "login": "decentralion",
          "type": "USERLIKE",
        },
        "type": "USERLIKE",
        "url": "https://github.com/decentralion",
      },
      "type": "COMMENT",
      "url": "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576920",
    },
    Object {
      "address": Object {
        "id": "385576936",
        "parent": Object {
          "number": "2",
          "repo": Object {
            "name": "example-github",
            "owner": "sourcecred",
            "type": "REPO",
          },
          "type": "ISSUE",
        },
        "type": "COMMENT",
      },
      "body": "This comment has no references.",
      "nominalAuthor": Object {
        "address": Object {
          "login": "decentralion",
          "type": "USERLIKE",
        },
        "type": "USERLIKE",
        "url": "https://github.com/decentralion",
      },
      "type": "COMMENT",
      "url": "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576936",
    },
  ],
  "nominalAuthor": Object {
    "address": Object {
      "login": "decentralion",
      "type": "USERLIKE",
    },
    "type": "USERLIKE",
    "url": "https://github.com/decentralion",
  },
  "title": "A referencing issue.",
  "type": "ISSUE",
  "url": "https://github.com/sourcecred/example-github/issues/2",
}
`;

exports[`plugins/github/relationalView pull matches snapshot 1`] = `
Object {
  "address": Object {
    "number": "5",
    "repo": Object {
      "name": "example-github",
      "owner": "sourcecred",
      "type": "REPO",
    },
    "type": "PULL",
  },
  "body": "@wchargin could you please do the following:
- add a commit comment
- add a review comment requesting some trivial change
- i'll change it
- then approve the pr",
  "comments": Array [
    Object {
      "address": Object {
        "id": "396430464",
        "parent": Object {
          "number": "5",
          "repo": Object {
            "name": "example-github",
            "owner": "sourcecred",
            "type": "REPO",
          },
          "type": "PULL",
        },
        "type": "COMMENT",
      },
      "body": "In retrospect, this was an excellent PR.",
      "nominalAuthor": Object {
        "address": Object {
          "login": "wchargin",
          "type": "USERLIKE",
        },
        "type": "USERLIKE",
        "url": "https://github.com/wchargin",
      },
      "type": "COMMENT",
      "url": "https://github.com/sourcecred/example-github/pull/5#issuecomment-396430464",
    },
  ],
  "mergedAs": Object {
    "hash": "6d5b3aa31ebb68a06ceb46bbd6cf49b6ccd6f5e6",
    "type": "COMMIT",
  },
  "nominalAuthor": Object {
    "address": Object {
      "login": "decentralion",
      "type": "USERLIKE",
    },
    "type": "USERLIKE",
    "url": "https://github.com/decentralion",
  },
  "reviews": Array [
    Object {
      "address": Object {
        "id": "100313899",
        "pull": Object {
          "number": "5",
          "repo": Object {
            "name": "example-github",
            "owner": "sourcecred",
            "type": "REPO",
          },
          "type": "PULL",
        },
        "type": "REVIEW",
      },
      "body": "hmmm.jpg",
      "comments": Array [
        Object {
          "address": Object {
            "id": "171460198",
            "parent": Object {
              "id": "100313899",
              "pull": Object {
                "number": "5",
                "repo": Object {
                  "name": "example-github",
                  "owner": "sourcecred",
                  "type": "REPO",
                },
                "type": "PULL",
              },
              "type": "REVIEW",
            },
            "type": "COMMENT",
          },
          "body": "seems a bit capricious",
          "nominalAuthor": Object {
            "address": Object {
              "login": "wchargin",
              "type": "USERLIKE",
            },
            "type": "USERLIKE",
            "url": "https://github.com/wchargin",
          },
          "type": "COMMENT",
          "url": "https://github.com/sourcecred/example-github/pull/5#discussion_r171460198",
        },
      ],
      "nominalAuthor": Object {
        "address": Object {
          "login": "wchargin",
          "type": "USERLIKE",
        },
        "type": "USERLIKE",
        "url": "https://github.com/wchargin",
      },
      "state": "CHANGES_REQUESTED",
      "type": "REVIEW",
      "url": "https://github.com/sourcecred/example-github/pull/5#pullrequestreview-100313899",
    },
    Object {
      "address": Object {
        "id": "100314038",
        "pull": Object {
          "number": "5",
          "repo": Object {
            "name": "example-github",
            "owner": "sourcecred",
            "type": "REPO",
          },
          "type": "PULL",
        },
        "type": "REVIEW",
      },
      "body": "I'm sold",
      "comments": Array [],
      "nominalAuthor": Object {
        "address": Object {
          "login": "wchargin",
          "type": "USERLIKE",
        },
        "type": "USERLIKE",
        "url": "https://github.com/wchargin",
      },
      "state": "APPROVED",
      "type": "REVIEW",
      "url": "https://github.com/sourcecred/example-github/pull/5#pullrequestreview-100314038",
    },
  ],
  "title": "This pull request will be more contentious. I can feel it...",
  "type": "PULL",
  "url": "https://github.com/sourcecred/example-github/pull/5",
}
`;

exports[`plugins/github/relationalView repo address matches snapshot 1`] = `
Object {
  "name": "example-github",
  "owner": "sourcecred",
  "type": "REPO",
}
`;

exports[`plugins/github/relationalView repo has issues 1`] = `6`;

exports[`plugins/github/relationalView repo has pulls 1`] = `6`;

exports[`plugins/github/relationalView review matches snapshot 1`] = `
Object {
  "address": Object {
    "id": "100313899",
    "pull": Object {
      "number": "5",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "PULL",
    },
    "type": "REVIEW",
  },
  "body": "hmmm.jpg",
  "comments": Array [
    Object {
      "address": Object {
        "id": "171460198",
        "parent": Object {
          "id": "100313899",
          "pull": Object {
            "number": "5",
            "repo": Object {
              "name": "example-github",
              "owner": "sourcecred",
              "type": "REPO",
            },
            "type": "PULL",
          },
          "type": "REVIEW",
        },
        "type": "COMMENT",
      },
      "body": "seems a bit capricious",
      "nominalAuthor": Object {
        "address": Object {
          "login": "wchargin",
          "type": "USERLIKE",
        },
        "type": "USERLIKE",
        "url": "https://github.com/wchargin",
      },
      "type": "COMMENT",
      "url": "https://github.com/sourcecred/example-github/pull/5#discussion_r171460198",
    },
  ],
  "nominalAuthor": Object {
    "address": Object {
      "login": "wchargin",
      "type": "USERLIKE",
    },
    "type": "USERLIKE",
    "url": "https://github.com/wchargin",
  },
  "state": "CHANGES_REQUESTED",
  "type": "REVIEW",
  "url": "https://github.com/sourcecred/example-github/pull/5#pullrequestreview-100313899",
}
`;

exports[`plugins/github/relationalView userlike matches snapshot 1`] = `
Object {
  "address": Object {
    "login": "decentralion",
    "type": "USERLIKE",
  },
  "type": "USERLIKE",
  "url": "https://github.com/decentralion",
}
`;
